logs/nxt-simplecost.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/auxiliare'...
Listing './lib/python3.5/site-packages/auxiliare/locale'...
Listing './lib/python3.5/site-packages/auxiliare/locale/fr_FR'...
Listing './lib/python3.5/site-packages/auxiliare/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/auxiliare/migrations'...
Listing './lib/python3.5/site-packages/auxiliare/static'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/css'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/css/images'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/css/svgs'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/img'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/js'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/js/vendor'...
Listing './lib/python3.5/site-packages/auxiliare/templates'...
Listing './lib/python3.5/site-packages/auxiliare/templates/accounts'...
Listing './lib/python3.5/site-packages/auxiliare/templates/auxiliare'...
Compiling './lib/python3.5/site-packages/auxiliare/templates/auxiliare/home.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/auxiliare/home.html.py", line 1
    BBBBBBB BBBBBBBBBBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/auxiliare.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/auxiliare.html.py", line 1
    BBBB BBBBBB BBBB BBBBBBBBBBB
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/base.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/base.html.py", line 1
    BBBB BBBBBB BBBB BBBBBBBBBBB
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/menu.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/menu.html.py", line 1
    BBBB BBBBBB BBBB BBBBBBBBBBB
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/auxiliare/templates/registration'...
Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/forgotten_password.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/forgotten_password.html.py", line 1
    BBBBBBB BBBBBBBBBBBBBBBB
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/login.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/login.html.py", line 1
    BBBBBBB BBBBBBBBBBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/logout.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/logout.html.py", line 1
    BBBBBBB BBBBBBBBBBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/password_reset_email.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/password_reset_email.html.py", line 1
    BBBB BBBBBBBBBBBBBB BBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/passwordresetemail.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/passwordresetemail.html.py", line 1
    BBBB BBBBBBBBBBBBBB BBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/test_template.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/test_template.html.py", line 1
    BBBBBBB BBBBBBBBBBBBBBBB
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_auxiliare-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/nxt_simplecost-0.0.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplecost'...
Listing './lib/python3.5/site-packages/simplecost/locale'...
Listing './lib/python3.5/site-packages/simplecost/locale/fr_FR'...
Listing './lib/python3.5/site-packages/simplecost/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/simplecost/migrations'...
Listing './lib/python3.5/site-packages/simplecost/templates'...
Listing './lib/python3.5/site-packages/simplecost/templates/simplecost'...
Listing './share'...
Listing './share/python-wheels'...
